# Jira_Reporting

./: .env.example  .gitignore  README.md  access_board_21634.py  check_board.py  check_board_21633.py  cross_platform_analytics.py  dashboard_generator.py  demo_cloud_migration.py  direct_board_access.py  direct_board_api.py  enhanced_auth.py  enhanced_config.py  enhanced_report_generator.py  find_board.py  find_ocm_project.py  generate_ocm_report.py  github_client.py  github_webhook_handler.py  ocm_components_status.py  ocm_targeted_status.py  phase1_test_report.json  pyproject.toml  quick_ocm_status.py  quick_phase2_test.py  quick_test.py  show_recent_boards.py  test_analytics_demo.py  test_crud_direct.py  test_crud_minimal.py  test_crud_working.py  test_ocm.py  test_ocm_metadata.py  test_phase1.py  test_phase2_crud.py  test_phase3_github.py  validate_phase3.py
dashboards/: dashboard-multi-cluster-management-engineering-2025-09-06.html
dashboards/detailed/: detailed-analytics-multi-cluster-management-engineering-2025-09-06.md
dashboards/developer/: developer-dashboard-multi-cluster-management-engineering-2025-09-06.md
dashboards/executive/: executive-dashboard-multi-cluster-management-engineering-2025-09-06.md
jira_mcp_server/: __init__.py  config.py  jira_client.py  main.py  mcp_server.py  models.py  rag_classifier.py  report_generator.py
reports/google-docs/: weekly-report-multi-cluster-management-engineering-2025-09-05.html  (+1 more)
tests/: __init__.py  conftest.py  test_config.py  test_rag_classifier.py
(+4 files in other folders)
